design bugs fixed - responsive mobile mode

--- a/DopeWeb/Views/Shared/_Layout.cshtml
+++ b/DopeWeb/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
     </main>
 
     <footer class="border-top footer text-muted">
-        <div class="container" style="margin-left:35%">
+        <div class="container" style="text-align:center">
             &copy; 2021 - DopeWeb - Developed By: <a href="https://www.linkedin.com/in/rahul-nagarkoti/" target="_blank">Rahul Nagarkoti</a> @*- <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>*@
         </div>
     </footer>
