--- a/DopeWeb/Views/Home/Index.cshtml
+++ b/DopeWeb/Views/Home/Index.cshtml
@@ -3,19 +3,19 @@
 
 <body>
 
-    <!-- ======= Hero Section ======= -->
-    <section id="hero" style="position:relative;text-align:center;">
 
-        <div class="hero-container" style="position: absolute; bottom: 400px;">
-            <div id="socials" style="position:relative;top:-40px;">
+    <!-- ======= Hero Section ======= -->
+    <section id="hero">
+        <div class="d-flex justify-content-center">
+            <div id="socials">
                 <a href="https://twitter.com/RADopeboy?s=20" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
                 <a href="https://www.facebook.com/radope-110529630793880" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
                 <a href="https://www.instagram.com/r.a.dope/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
                 <a href="#" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
             </div>
-            <!--<a class="btn-cls" style="padding: 8px 35px 9px 35px; " href="ViewCart" data-ajax="true" >-->@*Get Started*@<!--</a>-->
         </div>
-    </section><!-- End Hero -->
+    </section>
+    <!-- End Hero -->
     <!-- ======= Header ======= -->
     <header id="header" class="d-flex align-items-center ">
         <div class="container-fluid d-flex align-items-center justify-content-lg-between">
@@ -99,7 +99,7 @@
                                 </div>
                             }
 
-                         
+
                         </div>
                         <div class="swiper-pagination"></div>
                     </div>
@@ -280,7 +280,7 @@
                         <div class="col-lg-6">
                             <form action="" method="post">
                                 <input type="email" id="footerEmail" name="email" placeholder="Enter your Email">
-                                <input type="button"  id="subscribeFootBtn"  value="Subscribe" style="position: absolute; top: 0; right: -1px; bottom: 0; border: 0; background: none; font-size: 16px; padding: 0 20px; background: #ff7f5d; color: #fff; transition: 0.3s; 	 box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1); " />
+                                <input type="button" id="subscribeFootBtn" value="Subscribe" style="position: absolute; top: 0; right: -1px; bottom: 0; border: 0; background: none; font-size: 16px; padding: 0 20px; background: #ff7f5d; color: #fff; transition: 0.3s; 	 box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1); " />
                             </form>
                         </div>
                     </div>
@@ -310,7 +310,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content" style="color:white;background:url('../img/DopePics/Concert.jpg') center center no-repeat;">
                 <div class="modal-header">
-                    <h5 class="modal-title" style=" transform: translate(180%, 0%); ">Subscribe</h5>
+                    <h5 class="modal-title" >Subscribe</h5>
                     <button type="button" id="closeModal" style=" background: none; border: none; color: white; " class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">X</span>
                     </button>
@@ -327,7 +327,7 @@
                         <div class="input-group mb-3">
                             <input type="text" id="email" class="form-control" placeholder="Enter your Email">
                             <div class="input-group-append">
-                                <button class="btn subscribe"  id="subscribeBtn"  style="background-color: #ff7f5d;color:white">Subscribe</button>
+                                <button class="btn subscribe" id="subscribeBtn" style="background-color: #ff7f5d;color:white">Subscribe</button>
                             </div>
                         </div>
 
@@ -335,13 +335,11 @@
 
                     </div>
                 </div>
-                <div class="modal-footer">
-                    <div style=" transform: translate(-120%, 0%);">
+                <div class="modal-footer justify-content-center">
                         <a href="https://twitter.com/RADopeboy?s=20" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
                         <a href="https://www.facebook.com/radope-110529630793880" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
                         <a href="https://www.instagram.com/r.a.dope/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
                         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-                    </div>
                 </div>
             </div>
         </div>
